[project]
name = "cgm-sandbox"
version = "0.1.0"
description = ""
authors = [
    {name = "Bill Chen",email = "billchen0011@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = "^3.10"
dependencies = [
    "ipykernel (>=7.0.1,<8.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry]
package-mode = false